--- a/UtopiaCity/Resources/Views/TimelineBasic/Create.kz.resx
+++ b/UtopiaCity/Resources/Views/TimelineBasic/Create.kz.resx
@@ -118,15 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Date" xml:space="preserve">
-    <value>Дата</value>
+    <value>Күн</value>
   </data>
   <data name="Schedule" xml:space="preserve">
-    <value>Расписание</value>
+    <value>Кесте</value>
   </data>
   <data name="TranscriptionOfPermissions" xml:space="preserve">
-    <value>Транскрипция разрешений</value>
+    <value>Транскрипция рұқсаты</value>
   </data>
   <data name="UniqueRules" xml:space="preserve">
-    <value>Уникальные правила</value>
+    <value>Ерекше ережелер</value>
   </data>
 </root>
