--- a/UtopiaCity/Resources/Views/TimelineBasic/Create.ru.resx
+++ b/UtopiaCity/Resources/Views/TimelineBasic/Create.ru.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BackToList" xml:space="preserve">
+    <value>Вернуться к списку</value>
+  </data>
+  <data name="Create" xml:space="preserve">
+    <value>Создать</value>
+  </data>
+  <data name="CreateButton" xml:space="preserve">
+    <value>Создать</value>
+  </data>
+  <data name="CreateTimelineView" xml:space="preserve">
+    <value>Страница Создания</value>
+  </data>
   <data name="Date" xml:space="preserve">
     <value>Дата</value>
   </data>
